--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <div class="container">
        <div class="navbar-translate">
          <a class="navbar-brand" href="#" rel="tooltip" data-placement="bottom">
-           <span>InkEspresso.</span>
+           <span style="color:#ffecdc">InkEspresso.</span>
          </a>
          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-bar bar1"></span>
@@ -49,37 +49,16 @@
            </div>
          </div>
          <ul class="navbar-nav">
-           <!--- li class="nav-item p-0">
-             <a class="nav-link" rel="tooltip" title="Drop a email" data-placement="bottom" href="mailto:k13han@pm.me" target="_blank" rel='external nofollow'>
-               <i class="tim-icons icon-email-85"></i>
-               <p class="d-lg-none d-xl-none">Email</p>
-             </a --->
                 <li class="nav-item p-0">
-                   <a class="nav-link" rel="tooltip" data-placement="bottom" href="https://www.linkedin.com/company/inkespresso/" target="_blank" rel='external nofollow'>
+                   <a class="nav-link" rel="tooltip" title="Connect on Linkedin" data-placement="bottom" href="https://www.linkedin.com/company/inkespresso/" target="_blank" rel='external nofollow'>
                      <i class="fab fa-linkedin"></i>
                      <p class="d-lg-none d-xl-none">Linkedin</p>
                    </a>
                    <li class="nav-item p-0">
-                    <a class="nav-link" rel="tooltip" data-placement="bottom" href="https://www.instagram.com/ink_espresso" target="_blank" rel='external nofollow'>
+                    <a class="nav-link" rel="tooltip" title="Follow on Instagram" data-placement="bottom" href="https://www.instagram.com/ink_espresso" target="_blank" rel='external nofollow'>
                       <i class="fab fa-instagram"></i>
                       <p class="d-lg-none d-xl-none">Instagram</p>
                     </a>
-               <!--- li class="dropdown nav-item">
-             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-               <i class="fa fa-cogs d-lg-none d-xl-none"></i> Navigate
-             </a>
-             <div class="dropdown-menu dropdown-with-icons">
-               <a data-scroll href="./sections/about.html" class="dropdown-item">
-                 <i class="tim-icons icon-single-02"></i>About
-               </a>
-               <a href="./index.html" class="dropdown-item">
-                 <i class="tim-icons icon-double-right"></i>Home
-               </a>
-               <a data-scroll href="#submit" class="dropdown-item">
-                <i class="tim-icons icon-cloud-upload-94"></i>Suggest a Resource
-              </a>
-             </div>
-           </li --->
            <li class="nav-item">
              <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:kishan@ink-espresso.com" rel='external nofollow'> <b>Get Quote</b>
              </a>
@@ -89,43 +68,21 @@
      </div>
    </nav>
    <!-- End Navbar -->
-   
-  <!--- div class="wrapper">
-    < div class="page-header header-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/img/Kishan\ Chauhan.jpg');">
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 ml-auto mr-auto text-center">
-            <h1 class="title"> COVID-19 Resources!</h1>
-            <div class="Center">
-                <button class="btn btn-neutral btn-center" data-toggle="modal" data-target="#myModal" id="disclaimer">
-                    Disclaimer
-                </button>
-              </div><br>
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-              </svg>
-              <br/>
-          </div>
-        </div>
-      </div>
-    </div -->
-
+  
  <div class="wrapper">
     <div class="section">
       <div class="container"> <br><br>
         <div class="page-header header-filter">
           <img src='assets/img/Typing_Loop.gif'>
           <h4 class="title text-center"> <span style="color:violet">Hold tight. Caffeine-addicts at work!</span></h4>
-         </div>
-        </div>
-          <div class="col-md-8 ml-auto mr-auto">
+          <div class="col-md-auto ml-auto mr-auto">
             <p><span class="badge badge-info badge-warning">Who Are We</span></p>
             <br>
-            <h4><b><span style="color:gold">InkEspresso</b></span> is a <span style="color:#ffecdc"><b>transformative creative agency</b></span> that abets businesses to marketing and advertising success.We provide lasting and future-ready solutions built on the foundation of over 10 years of experience and expertise in <span style="color:aqua"><b>content marketing</b>, <b>social media marketing</b>, <b>SEO & networking</b>, <b>brand strategizing</b></span>, and many more.</h4>
+            <h4><b><u><span style="color:#ffecdc">InkEspresso</span></u></b> is a <span style="color:gold"><b>transformative creative agency</b></span> that abets businesses to marketing and advertising success.We provide lasting and future-ready solutions built on the foundation of over 10 years of experience and expertise in <span style="color:aqua"><b>content marketing</b>, <b>social media marketing</b>, <b>SEO & networking</b>, <b>brand strategizing</b></span>, and many more.</h4>
         </div>
       </div>
+         </div>
+        </div>
     </div>
                 <p class="title text-center" style="font-size:28px"><mark>Site under construction. Thanks for your patience.</mark></p>
     <section class="section">
