--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container"> <br><br>
         <div class="page-header header-filter">
           <img src='assets/img/Typing_Loop.gif'>
-          <h4 class="title text-center"> <span style="color:violet">Hold tight. Caffeine-addicts at work!</span></h4>
+          <h4 class="title text-center"> <span style="color:violet">Hold tight. Caffeine-addicts at work!</span></h4><br>
           <div class="col-md-auto ml-auto mr-auto">
             <p><span class="badge badge-info badge-warning">Who Are We</span></p>
             <br>
