--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       <p class="d-lg-none d-xl-none">Instagram</p>
                     </a>
            <li class="nav-item">
-             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:kishan@ink-espresso.com" rel='external nofollow'> <b>Get Quote</b>
+             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:inkespresso@gmail.com" rel='external nofollow'> <b>Get Quote</b>
              </a>
            </li>
          </ul>
@@ -95,7 +95,7 @@
                   <h5 class="text-on-back">#</h5>
                 </div>
                 <div class="card-body">
-                  <form name="contact" method="POST" action="https://formspree.io/f/xwkapaon">
+                  <form name="contact" method="POST" action="https://formspree.io/f/xwkjlrgw">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
@@ -131,7 +131,7 @@
                 <div class="description">
                   <h4 class="info-title">Request Proposal</h4>
                   <p>Drop a note and get a comprehensive quote on a future-ready digital and creative solution for your business within 24 hrs!</p><br>
-                  <a class="btn btn-primary btn-round float-left" href="mailto:kishan@ink-espresso.com" rel='external nofollow'>
+                  <a class="btn btn-primary btn-round float-left" href="mailto:inkespressoh@gmail.com" rel='external nofollow'>
                     Mail Us
                   </a>
                   </p>
