--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
-    InkEspresso
+    Addrawn
   </title>
-  <meta name="description" content="InkEspresso is a transformative creative and digital marketing agency that abets businesses to marketing and advertising success." />
+  <meta name="description" content="Addrawn is a transformative creative and digital marketing agency that abets businesses to marketing and advertising success." />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -25,7 +25,7 @@
      <div class="container">
        <div class="navbar-translate">
          <a class="navbar-brand" href="#" rel="tooltip" data-placement="bottom">
-           <span style="color:#ffecdc">InkEspresso.</span>
+           <span style="color:#ffecdc">Addrawn.</span>
          </a>
          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-bar bar1"></span>
@@ -50,7 +50,7 @@
          </div>
          <ul class="navbar-nav">
                 <li class="nav-item p-0">
-                   <a class="nav-link" rel="tooltip" title="Connect on Linkedin" data-placement="bottom" href="https://www.linkedin.com/company/inkespresso/" target="_blank" rel='external nofollow'>
+                   <a class="nav-link" rel="tooltip" title="Connect on Linkedin" data-placement="bottom" href="https://www.linkedin.com/company/Addrawn/" target="_blank" rel='external nofollow'>
                      <i class="fab fa-linkedin"></i>
                      <p class="d-lg-none d-xl-none">Linkedin</p>
                    </a>
@@ -60,7 +60,7 @@
                       <p class="d-lg-none d-xl-none">Instagram</p>
                     </a>
            <li class="nav-item">
-             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:inkespresso@gmail.com" rel='external nofollow'> <b>Get Quote</b>
+             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:Addrawn@gmail.com" rel='external nofollow'> <b>Get Quote</b>
              </a>
            </li>
          </ul>
@@ -78,7 +78,7 @@
           <div class="col-md-auto ml-auto mr-auto">
             <p><span class="badge badge-info badge-warning">Who Are We</span></p>
             <br>
-            <h4><b><u><span style="color:#ffecdc">InkEspresso</span></u></b> is a <span style="color:gold"><b>transformative creative agency</b></span> that abets businesses to marketing and advertising success. We provide lasting and future-ready solutions built on the foundation of over 10 years of experience and expertise in <span style="color:aqua"><b>content marketing</b>, <b>social media marketing</b>, <b>SEO & networking</b>, <b>brand strategizing</b></span>, and many more.</h4>
+            <h4><b><u><span style="color:#ffecdc">Addrawn</span></u></b> is a <span style="color:gold"><b>transformative creative agency</b></span> that abets businesses to marketing and advertising success. We provide lasting and future-ready solutions built on the foundation of over 10 years of experience and expertise in <span style="color:aqua"><b>content marketing</b>, <b>social media marketing</b>, <b>SEO & networking</b>, <b>brand strategizing</b></span>, and many more.</h4>
         </div>
       </div>
          </div>
@@ -131,7 +131,7 @@
                 <div class="description">
                   <h4 class="info-title">Request Proposal</h4>
                   <p>Drop a note and get a comprehensive quote on a future-ready digital and creative solution for your business within 24 hrs!</p><br>
-                  <a class="btn btn-primary btn-round float-left" href="mailto:inkespressoh@gmail.com" rel='external nofollow'>
+                  <a class="btn btn-primary btn-round float-left" href="mailto:Addrawnh@gmail.com" rel='external nofollow'>
                     Mail Us
                   </a>
                   </p>
