--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                      <p class="d-lg-none d-xl-none">Linkedin</p>
                    </a>
                    <li class="nav-item p-0">
-                    <a class="nav-link" rel="tooltip" title="Follow on Instagram" data-placement="bottom" href="https://www.instagram.com/ink_espresso" target="_blank" rel='external nofollow'>
+                    <a class="nav-link" rel="tooltip" title="Follow on Instagram" data-placement="bottom" href="https://www.instagram.com/addrawn" target="_blank" rel='external nofollow'>
                       <i class="fab fa-instagram"></i>
                       <p class="d-lg-none d-xl-none">Instagram</p>
                     </a>
            <li class="nav-item">
-             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:Addrawn@gmail.com" rel='external nofollow'> <b>Get Quote</b>
+             <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:addrawn20@gmail.com" rel='external nofollow'> <b>Get Quote</b>
              </a>
            </li>
          </ul>
