--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
-    Addrawn
+    addrawn.
   </title>
   <meta name="description" content="Addrawn is a transformative creative and digital marketing agency that abets businesses to marketing and advertising success." />
   <!--     Fonts and icons     -->
@@ -25,7 +25,7 @@
      <div class="container">
        <div class="navbar-translate">
          <a class="navbar-brand" href="#" rel="tooltip" data-placement="bottom">
-           <span style="color:#ffecdc">Addrawn.</span>
+           <span style="color:#ffecdc">addrawn.</span>
          </a>
          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-bar bar1"></span>
@@ -59,6 +59,12 @@
                       <i class="fab fa-instagram"></i>
                       <p class="d-lg-none d-xl-none">Instagram</p>
                     </a>
+                    
+                   <li class="nav-item p-0">
+                    <a class="nav-link" rel="tooltip" title="Follow on X" data-placement="bottom" href="https://www.twitter.com/addrawn" target="_blank" rel='external nofollow'>
+                      <i class="fab fa-twitter"></i>
+                      <p class="d-lg-none d-xl-none">X</p>
+                    </a>
            <li class="nav-item">
              <a class="nav-link btn btn-success d-none d-lg-block" href="mailto:addrawn20@gmail.com" rel='external nofollow'> <b>Get Quote</b>
              </a>
@@ -74,7 +80,7 @@
       <div class="container"> <br><br>
         <div class="page-header header-filter">
           <img src='assets/img/Typing_Loop.gif'>
-          <h4 class="title text-center"> <span style="color:violet">Hold tight. Caffeine-addicts at work!</span></h4><br>
+          <h4 class="title text-center"> <span style="color:violet">Beyond Brilliance ♾ </span></h4><br>
           <div class="col-md-auto ml-auto mr-auto">
             <p><span class="badge badge-info badge-warning">Who Are We</span></p>
             <br>
@@ -84,7 +90,7 @@
          </div>
         </div>
     </div>
-                <p class="title text-center" style="font-size:28px"><mark>Site under construction. Thanks for your patience.</mark></p>
+               
     <section class="section">
         <div class="container">
           <div class="row">
@@ -131,7 +137,7 @@
                 <div class="description">
                   <h4 class="info-title">Request Proposal</h4>
                   <p>Drop a note and get a comprehensive quote on a future-ready digital and creative solution for your business within 24 hrs!</p><br>
-                  <a class="btn btn-primary btn-round float-left" href="mailto:Addrawnh@gmail.com" rel='external nofollow'>
+                  <a class="btn btn-primary btn-round float-left" href="mailto:addrawn20@gmail.com" rel='external nofollow'>
                     Mail Us
                   </a>
                   </p>
@@ -143,7 +149,7 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">Connect via mail</h4>
-                  <a class="btn btn-primary" href="mailto:k13han@pm.me" rel='external nofollow'>Drop an e-mail!</a>
+                  <a class="btn btn-primary" href="mailto:addrawn20@gmail.com" rel='external nofollow'>Drop an e-mail!</a>
                   </p>
                 </div --->
               </div>
@@ -157,7 +163,7 @@
            <div class="col">
              <ul class="nav">
                <li class="nav-item">
-                 ALL RIGHTS RESERVED - &copy; 2023 Silver Boat Inc.</br>
+                 ALL RIGHTS RESERVED - &copy; 2024 Silver Boat LLC.</br>
                </li>
              </ul>
            </div>
